# pychardet

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  README.rst  build.py  pyproject.toml  setup.cfg  tox.ini
pychardet/: __init__.py  detector.cpp  detector.h  encoding_detector.pyx
tests/: test_detect.py  test_detector.py  test_encoding.py  utils.py
