[tool.poetry]
name = "pychardet"
version = "0.0.7"
description = "Fast Universal Encoding Detection in Python"
authors = [
    "Vladislav Blinov <cunningplan@yandex.ru>",
]
repository = "https://github.com/chomechome/pychardet"
build = "build.py"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.5"
Cython = "3.0a3"

[tool.poetry.dev-dependencies]
pytest = "^5.2.2"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.30.0"
flake8 = "^3.7.9"
flake8-isort = "^2.7.0"
flake8-pytest = "^1.3"
pep8-naming = "^0.9.0"
isort = "^4.3.21"
unify = "^0.5"
codecov = "^2.0.15"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
